<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">C-Parking</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_input">Username Input</string>
    <string name="password_input">Password Input</string>
    <string name="logout">Logout</string>
    <string name="bem_vindo_utilizador">Bem vindo utilizador!</string>
    <string name="todo">TODO</string>
    <string name="iniciar">Iniciar</string>
    <string name="qrCoderResult">...</string>
    <string name="c_parking">C-PARKING</string>
    <string name="email">Email</string>
    <string name="quot_c_parking_logo_quot">\"C-Parking logo\"</string>
</resources>